force-app/main/default/objects/Route_Assignment__c/Route_Assignment__c.object-meta.xml
<CustomObject>
    <label>Route Assignment</label>
    <pluralLabel>Route Assignments</pluralLabel>
    
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>