force-app/main/default/objects/Route_Assignment__c/fields/Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature__c</fullName>
    <label>Customer Signature</label>
    <type>TextArea</type>
</CustomField>