force-app/main/default/objects/Route_Assignment__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Pending</fullName></value>
        <value><fullName>Delivered</fullName></value>
        <value><fullName>Failed</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>