force-app/main/default/objects/Route_Assignment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>MasterDetail</type>
    <referenceTo>Laundry_Order__c</referenceTo>
    <relationshipName>RAOrder</relationshipName>

</CustomField>