force-app/main/default/objects/Route_Assignment__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>MasterDetail</type>
    <referenceTo>Delivery_Route__c</referenceTo>
    <relationshipName>Route</relationshipName>

</CustomField>